<resources>
    <string name="app_name">ci</string>
    <string name="texto_inicial">Name</string>
    <string name="texto_localizacao">Localization</string>
    <string name="hint_edit_texto">Digite um usuario git</string>
    <string name="button_valor_enviar">Buscar</string>
    <string name="button_limpar">Limpar</string>
    <string name="git_users">Git users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello detalhes usuario</string>

    <string name="historico_usuario">Histórico usuario</string>
    <string name="deep_link">Tecnologias com deep link</string>
    <string name="pesquisas_recentes_titulo">Pesquisas recentes</string>
</resources>