<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin">

        <TextView
            android:id="@+id/textView_titulo_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:text="@string/git_users"
            android:textSize="@dimen/text_view_titulo_usuario"
            app:layout_constraintEnd_toStartOf="@+id/layout_text_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_edit"
            app:layout_constraintTop_toBottomOf="@+id/textView_titulo_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_novo_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edit_texto" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_altera_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/button_valor_enviar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_text_input" />

        <Button
            android:id="@+id/button_limpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/button_limpar"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_altera_nome" />

        <ImageView
            android:id="@+id/imageViewUsuario"
            android:layout_width="@dimen/tamanho_imagem"
            android:layout_height="@dimen/tamanho_imagem"
            android:layout_marginTop="@dimen/margin"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_limpar"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/text_texto_central"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/texto_inicial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUsuario" />

        <TextView
            android:id="@+id/text_texto_localizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/texto_localizacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_texto_central" />

        <Button
            android:id="@+id/button_detalhes_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_button_detalhes_usuario"
            android:background="@color/black"
            android:text="@string/detalhes_usuario"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUsuario" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>